[package]
name = "axum-anyhow"
description = "Ergonomic error handling for Axum using anyhow"
version = "0.1.1"
edition = "2021"
authors = ["Shad Sharma <shadanan@gmail.com>"]
license = "MIT"
repository = "https://github.com/kosolabs/axum-anyhow"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-test = "0.4.4"
