[package]
name = "axum-anyhow"
description = "Ergonomic error handling for Axum using anyhow"
readme = "README.md"
version = "0.7.6"
edition = "2021"
authors = ["Shad Sharma <shadanan@gmail.com>"]
license = "MIT"
repository = "https://github.com/kosolabs/axum-anyhow"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
axum = { version = "0.8.6", features = ["macros"] }
http-body-util = "0.1.3"
serde_json = "1.0.145"
serial_test = "3.2.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-test = "0.4.4"
tracing = "0.1.41"
